--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -1,10 +1,59 @@
+# This is a basic workflow to help you get started with Actions
+
+name: Build
+
+# Controls when the action will run.
+on:
+  # Triggers the workflow on push or pull request events but only for the master branch
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  build:
-    runs-on: [ubuntu-latest, macos-latest]
+  # This workflow contains a single job called "build"
+  buildLinux:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - uses: krdlab/setup-haxe@v1
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+            
+      - uses: krdlab/setup-haxe@master
         with:
-          haxe-version: 4.0.5
-      - run: |
-          haxe -version
-          haxelib install hxnodejs
+          haxe-version: 4.1.5
+      - name: Install Haxelib
+        run: |      
+            sudo add-apt-repository ppa:haxe/releases -y
+            sudo apt update
+            sudo apt install neko tar -y
+            wget https://github.com/HaxeFoundation/haxe/releases/download/4.1.5/haxe-4.1.5-linux64.tar.gz
+            haxelib install lime 7.9.0
+            haxelib install openfl
+            haxelib install flixel
+            haxelib run lime setup flixel
+            haxelib run lime setup
+            haxelib install flixel-tools
+            haxelib install flixel-addons
+            haxelib install flixel-ui
+            haxelib install hscript
+            haxelib install newgrounds
+            haxelib git faxe https://github.com/uhrobots/faxe
+            haxelib git polymod https://github.com/larsiusprime/polymod.git
+            haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
+      - name: Compile
+        run: echo "${{github.run_id}}" > VERSION
+      - name: Compile
+        run:  haxelib run lime build linux --app-version="4.0.0-${{ github.run_id}}"
+      - name: Publish Artifact
+        uses: actions/upload-artifact@v2.2.4
+        with:
+          name: linuxBuild
+          path: 'export/release/linux/bin'
+          
