--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -1,59 +1,54 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Build
+name: Linux Build CI
 
-# Controls when the action will run.
-on:
-  # Triggers the workflow on push or pull request events but only for the master branch
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+# Controls when the workflow will run
+on: [push, pull_request]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  buildLinux:
+  build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
+    
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-            
-      - uses: krdlab/setup-haxe@master
+      - uses: krdlab/setup-haxe@v1
         with:
           haxe-version: 4.1.5
-      - name: Install Haxelib
-        run: |      
-            sudo add-apt-repository ppa:haxe/releases -y
-            sudo apt update
-            sudo apt install neko tar -y
-            wget https://github.com/HaxeFoundation/haxe/releases/download/4.1.5/haxe-4.1.5-linux64.tar.gz
-            haxelib install lime 7.9.0
-            haxelib install openfl
-            haxelib install flixel
-            haxelib run lime setup flixel
-            haxelib run lime setup
-            haxelib install flixel-tools
-            haxelib install flixel-addons
-            haxelib install flixel-ui
-            haxelib install hscript
-            haxelib install newgrounds
-            haxelib git faxe https://github.com/uhrobots/faxe
-            haxelib git polymod https://github.com/larsiusprime/polymod.git
-            haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
-      - name: Compile
-        run: echo "${{github.run_id}}" > VERSION
-      - name: Compile
-        run:  haxelib run lime build linux --app-version="4.0.0-${{ github.run_id}}"
-      - name: Publish Artifact
-        uses: actions/upload-artifact@v2.2.4
-        with:
-          name: linuxBuild
-          path: 'export/release/linux/bin'
+      # Runs a set of commands using the runners shell
+      - name: script run line haha
+        run: |
+          sudo add-apt-repository ppa:haxe/releases -y
+          sudo apt-get update
+          sudo apt-get install gcc-multilib g++-multilib haxe -y
+          mkdir "%HAXELIB_ROOT%"
+          haxelib setup "%HAXELIB_ROOT%"
+          haxelib install lime 7.9.0
+          haxelib install openfl
+          haxelib install flixel
+          haxelib run lime setup flixel
+          haxelib run lime setup
+          haxelib install flixel-tools
+          haxelib install flixel-addons
+          haxelib install flixel-ui
+          haxelib install hscript
+          haxelib install flixel-addons
+          haxelib git faxe https://github.com/uhrobots/faxe
+          haxelib git polymod https://github.com/MasterEric/polymod.git
+          haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
+          haxelib git extension-webm https://github.com/KadeDev/extension-webm
+          haxelib run lime rebuild extension-webm linux
+          haxelib git linc_luajit https://github.com/MasterEric/linc_luajit.git
+          haxelib git hxvm-luajit https://github.com/nebulazorua/hxvm-luajit.git
+          haxelib install actuate 
+          haxelib list
+          haxelib run lime build linux
           
+      # - uses: actions/upload-artifact@v2
+      #   with:
+      #     name: Linux Build
+      #     path: export/release/linux/bin
